tests/sources/invalid/strings/string_implicit_conv_error.fire
import @firescript/std.io.println;
println("value: " + 42);  //~ ERROR FS-SEM-0010 @19
string s = "x" + true;  //~ ERROR FS-SEM-0010 @16
